<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">


    <RelativeLayout
        android:id="@+id/loader_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/loader"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/loader" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/weather_forecast_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight=".08"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <EditText
                android:id="@+id/search_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableRight="@android:drawable/ic_menu_search"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:text="Bengaluru" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".32"
            android:background="@mipmap/banner"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="72sp"
                tools:text="26" />

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="24sp"
                tools:text="Bangalore" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/forecast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".6" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/retry_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/retry_btn"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawableTop="@mipmap/error"
            android:gravity="center"
            android:text="Retry"
            android:textColor="#fff"
            android:textSize="40sp" />
    </RelativeLayout>
</RelativeLayout>